--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,12 @@
 name: YcloudCI
 on: push
 jobs:
-  step1:
-   runs-on: ubuntu-latest
-  steps:
-   - name: print output
-     run: echo "Hello yaar"
-   - name: step2-show os
-     run: uname -a
-   - name: step3 -finish
-     run: echo "job completed without failure"
+  learning-job:
+    runs-on: ubuntu-latest
+    steps:
+    - name: print output
+      run: echo "Hello yaar"
+    - name: step2-show os
+      run: uname -a
+    - name: step3 -finish
+      run: echo "job completed without failure"
